syntax = "proto3";
package seiprotocol.seichain.evm;

import "google/protobuf/any.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/evm/types";

service Msg {
  rpc EVMTransaction(MsgEVMTransaction) returns (MsgEVMTransactionResponse);
}

message MsgEVMTransaction {
  google.protobuf.Any data = 1;
  DerivedData derived = 2;
}

message MsgEVMTransactionResponse {
  uint64 gas_used = 1;
  string vm_error = 2;
  bytes return_data = 3;
  string hash = 4;
}

enum SignerVersion {
  LONDON = 0;
  CANCUN = 1;
}

// derived from signature
message DerivedData {
  bytes senderEVMAddr = 1;
  bytes senderSeiAddr = 2;
  bytes pubkey = 3;
  bool isAssociate = 4;
  SignerVersion version = 5;
}